# signal-probe

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_STFT.md  HANDSBOOK.md  LICENSE  README.md  SDD.md  SDD_STFT.md  SRS.md  SRS_STFT.md  TUTORIAL.md  ai_agent_eval_harness.md  docker-compose.yml  example_signal.csv
.github/: pull_request_template.md
.github/workflows/: ci.yml  llm-judge.yml  release.yml
backend/: .env.example  main.py  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 4c2e40f45db8_add_annotation_to_run_segments.py  a1b2c3d4e5f6_initial_schema.py  b2c3d4e5f6a7_multichannel_groups.py  c3d4e5f6a7b8_add_column_config_fields.py  d4e5f6a7b8c9_remove_ooc_count.py
backend/app/: main.py
backend/app/application/analysis/: stft_service.py
backend/app/application/group/: service.py
backend/app/application/signal/: column_inspector.py  pipeline.py  service.py
backend/app/application/user/: service.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: base.py  session.py
backend/app/domain/analysis/: schemas.py  stft_engine.py
backend/app/domain/group/: models.py  repository.py  schemas.py
backend/app/domain/signal/: enums.py  format_constants.py  models.py  repository.py  schemas.py
backend/app/domain/signal/algorithms/: classifier.py  lttb.py  segmenter.py
backend/app/domain/user/: models.py  repository.py  schemas.py
backend/app/infrastructure/: executor.py
backend/app/infrastructure/storage/: interface.py  local.py
backend/app/presentation/api/: dependencies.py
backend/app/presentation/api/v1/: router.py
backend/app/presentation/api/v1/endpoints/: analysis.py  auth.py  groups.py  signals.py  users.py
backend/tests/: test_error_handling.py  test_pipeline_stacked.py  test_stft_engine.py
data/: generate_signals.py  signal_data.csv
eval/: .judge.yml  requirements.txt  runner.py
eval/adapters/: __init__.py  base.py  bitbucket.py  cli.py  github.py  gitlab.py
eval/judge/: __init__.py  core.py  diff_parser.py  prompts.py  rubric.py  scorecard.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  plotly-dist-min.d.ts
frontend/src/components/: ColumnConfigPanel.tsx  ColumnConfigurator.tsx  FFTSpectrumChart.tsx  FileUploader.tsx  MicroChart.tsx  MultiChannelMacroChart.tsx  STFTExplorerPanel.tsx  STFTPanel.tsx  STFTParamControls.tsx  Sidebar.tsx  SpectrogramChart.tsx  SpectrogramHeatmap.tsx  SpectrumChart.tsx  StatusBadge.tsx  TimeSignalWithWindow.tsx  TopNav.tsx  WindowConfigControls.tsx
frontend/src/context/: AuthContext.tsx  SidebarContext.tsx  SignalsContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useColumnConfig.ts  useSTFT.ts  useSTFTExplorer.test.ts  useSTFTExplorer.ts  (+1 more)
(+14 files in other folders)
